change git config

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name = Pedro Santos
-  email = donbonifacio@gmail.com
+  name = Marcos Lamúria
+  email = marcoslamuria@gmail.com
 [diff]
   tool = vimdiff
 [difftool]
